# App-Estudio

./: .env.example  .gitignore  Concepto.md  NuevoEnfoque.txt  README.md  Stack.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/ai/: base.py  openai_provider.py  provider_factory.py
backend/app/core/: auth.py  config.py  supabase.py
backend/app/documents/: __init__.py  extractor.py
backend/app/routes/: ai.py  materials.py  study_assets.py  study_sessions.py  unlock_quiz.py
backend/app/schemas/: ai.py  materials.py  study_assets.py  study_sessions.py  unlock_quiz.py
backend/app/services/: material_service.py  study_asset_service.py  study_session_service.py  unlock_quiz_service.py
backend/tests/: test_auth.py  test_document_extractor.py  test_material_routes.py  test_study_asset_routes.py  test_study_session_routes.py  test_unlock_quiz_routes.py
design/: README.md
docs/: API_CONTRACTS.md  ARCHITECTURE.md  ENFOQUE_PRODUCTO.md  ESTADO_Y_ROADMAP.md  SETUP.md
mobile/: .env.example  .metadata  README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/lib/: main.dart
mobile/lib/app/: app.dart  router.dart
mobile/lib/core/auth/: supabase_auth_provider.dart
mobile/lib/core/config/: app_config.dart
mobile/lib/core/models/: study_enums.dart
mobile/lib/core/network/: api_client_provider.dart  (+2 more)
mobile/test/: data_models_test.dart  widget_test.dart
supabase/: config.toml
supabase/migrations/: 20260606184500_initial_schema.sql  20260606222000_api_grants.sql  20260606224500_profile_auth_trigger.sql
(+29 files in other folders)
