[project]
name = "focusstudy-backend"
version = "0.1.0"
description = "FastAPI backend for FocusStudy AI."
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.124.0",
  "uvicorn[standard]>=0.38.0",
  "pydantic>=2.12.0",
  "pydantic-settings>=2.12.0",
  "python-multipart>=0.0.20",
  "openai>=2.0.0",
  "supabase>=2.25.0",
  "httpx>=0.28.0",
  "pymupdf>=1.26.0",
  "pdfplumber>=0.11.0",
  "python-pptx>=1.0.0",
  "python-docx>=1.2.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.0",
  "ruff>=0.15.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
